force-app/main/default/objects/SalesforceEmailResult__x/SalesforceEmailResult__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceEmailResult</externalName>
    <label>Individual Email Result Salesforce</label>
    <pluralLabel>Individual Email Results Salesforce</pluralLabel>
</CustomObject>