force-app/main/default/objects/SalesforceEmailResult__x/fields/BounceSubCategoryC__c.field-meta.xml
<CustomField>
    <fullName>BounceSubCategoryC__c</fullName>
    <description>BounceSubCategoryC</description>
    <externalDeveloperName>BounceSubCategoryC</externalDeveloperName>
    <label>Tipologia Bounce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>