force-app/main/default/objects/SalesforceEmailResult__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <description>CreatedById</description>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Creato da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>