force-app/main/default/objects/SalesforceEmailResult__x/fields/EmailAddressC__c.field-meta.xml
<CustomField>
    <fullName>EmailAddressC__c</fullName>
    <description>EmailAddressC</description>
    <externalDeveloperName>EmailAddressC</externalDeveloperName>
    <label>EmailAddressC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>