force-app/main/default/objects/SalesforceEmailResult__x/fields/et4ae5_DateUnsubscribedC__c.field-meta.xml
<CustomField>
    <fullName>et4ae5_DateUnsubscribedC__c</fullName>
    <description>et4ae5_DateUnsubscribedC</description>
    <externalDeveloperName>et4ae5_DateUnsubscribedC</externalDeveloperName>
    <label>Data Disiscrizione</label>
    <type>DateTime</type>
</CustomField>