force-app/main/default/objects/SalesforceEmailResult__x/fields/et4ae5_EmailC__c.field-meta.xml
<CustomField>
    <fullName>et4ae5_EmailC__c</fullName>
    <description>et4ae5_EmailC</description>
    <externalDeveloperName>et4ae5_EmailC</externalDeveloperName>
    <label>Email</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>