force-app/main/default/objects/SalesforceEmailResult__x/fields/et4ae5_NumberOfUniqueClicksC__c.field-meta.xml
<CustomField>
    <fullName>et4ae5_NumberOfUniqueClicksC__c</fullName>
    <description>et4ae5_NumberOfUniqueClicksC</description>
    <externalDeveloperName>et4ae5_NumberOfUniqueClicksC</externalDeveloperName>
    <label>et4ae5_NumberOfUniqueClicksC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>