force-app/main/default/objects/SalesforceEmailResult__x/fields/et4ae5_OpenedC__c.field-meta.xml
<CustomField>
    <fullName>et4ae5_OpenedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>et4ae5_OpenedC</description>
    <externalDeveloperName>et4ae5_OpenedC</externalDeveloperName>
    <label>et4ae5_OpenedC</label>
    <type>Checkbox</type>
</CustomField>