force-app/main/default/objects/SalesforceEmailResult__x/fields/et4ae5_SubjectLineC__c.field-meta.xml
<CustomField>
    <fullName>et4ae5_SubjectLineC__c</fullName>
    <description>et4ae5_SubjectLineC</description>
    <externalDeveloperName>et4ae5_SubjectLineC</externalDeveloperName>
    <label>Oggetto Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>