force-app/main/default/objects/SalesforceEmailResult__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name</description>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Nome Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>